console,oauth: Fix dropdown clickable area

--- a/pkg/webui/components/dropdown/dropdown.styl
+++ b/pkg/webui/components/dropdown/dropdown.styl
@@ -45,6 +45,7 @@ ul.dropdown
       color: $tc-deep-gray
       text-decoration: none
       padding: $cs.m
+      width: 100%
 
       span:last-child
         nudge('down')
