console,oauth: Add font-display property to fonts

--- a/pkg/webui/styles/fonts.styl
+++ b/pkg/webui/styles/fonts.styl
@@ -17,6 +17,7 @@
   font-family: 'Source Sans Pro'
   font-style: normal
   font-weight: 400
+  font-display: fallback
   src: url('../assets/fonts/source-sans-pro-v13-latin_latin-ext-regular.eot') /* IE9 Compat Modes */
   src: local('Source Sans Pro Regular'), local('SourceSansPro-Regular'),
        url('../assets/fonts/source-sans-pro-v13-latin_latin-ext-regular.eot?#iefix') format('embedded-opentype'), // @stylint ignore /* IE6-IE8 */
@@ -29,6 +30,7 @@
   font-family: 'Source Sans Pro'
   font-style: normal
   font-weight: 600
+  font-display: fallback
   src: url('../assets/fonts/source-sans-pro-v13-latin_latin-ext-600.eot') /* IE9 Compat Modes */
   src: local('Source Sans Pro SemiBold'), local('SourceSansPro-SemiBold'),
     url('../assets/fonts/source-sans-pro-v13-latin_latin-ext-600.eot?#iefix') format('embedded-opentype'), // @stylint ignore /* IE6-IE8 */
@@ -42,6 +44,7 @@
   font-family: 'Source Sans Pro'
   font-style: normal
   font-weight: 700
+  font-display: fallback
   src: url('../assets/fonts/source-sans-pro-v13-latin_latin-ext-700.eot') /* IE9 Compat Modes */
   src: local('Source Sans Pro Bold'), local('SourceSansPro-Bold'),
        url('../assets/fonts/source-sans-pro-v13-latin_latin-ext-700.eot?#iefix') format('embedded-opentype'), // @stylint ignore /* IE6-IE8 */
@@ -54,6 +57,7 @@
   font-family: 'IBM Plex Mono'
   font-style: normal
   font-weight: 400
+  font-display: fallback
   src: url('../assets/fonts/ibm-plex-mono-regular.eot') /* IE9 Compat Modes */
   src: local('IBM Plex Mono'), local('IBMPlexMono'),
        url('../assets/fonts/ibm-plex-mono-regular.eot?#iefix') format('embedded-opentype'), // @stylint ignore /* IE6-IE8 */
@@ -66,5 +70,6 @@
   font-family: 'Material Icons'
   font-style: normal
   font-weight: 400
+  font-display: block
   src: url('../assets/fonts/materialicons.woff2') format('woff2')
 
