--- a/doc/themes/the-things-stack/layouts/shortcodes/proto/glossary.html
+++ b/doc/themes/the-things-stack/layouts/shortcodes/proto/glossary.html
@@ -1,12 +1,14 @@
-<dl>
-  {{- range $key, $elem := .Site.Data.glossary.glossary -}}
-    <dt><code>{{$key }}</code></dt>
-    <dd>{{.description}}</dd>
-    {{ with .ref }}
-      <dd><a href={{ . }} >{{ . }}</a></dd> 
+{{ $term := .Get "term" }}
+{{ if $term }}
+  {{- with index .Site.Data.glossary.glossary $term -}}
+    <dl>
+      {{ "partial proto/glossary-term.html" (dict "context" . "term" $term) }}
+    </dl>
+  {{ end}}
+{{ else }}
+  <dl>
+    {{- range $key, $elem := .Site.Data.glossary.glossary -}}
+      {{ partial "proto/glossary-term.html" (dict "context" . "term" $key) }}
     {{ end }}
-    {{ with .link }}
-      <dd><a href={{ . }}>{{ . }}</a></dd>
-    {{ end }}
-  {{ end }}
-</dl>
+  </dl>
+{{ end }}
