doc: Add frequency-plans.yml to docs:deps

--- a/doc/themes/the-things-stack/assets/css/theme.scss
+++ b/doc/themes/the-things-stack/assets/css/theme.scss
@@ -250,7 +250,7 @@ details + blockquote {
 
 .frequency-plan {
   .name {
-    background-color: #ececec;
+    background-color: $white-ter;
     padding: 0.25rem;
     font-weight: bold;
   }
