--- a/doc/themes/the-things-stack/assets/css/theme.scss
+++ b/doc/themes/the-things-stack/assets/css/theme.scss
@@ -267,6 +267,42 @@ details + blockquote {
   filter: drop-shadow(0 2px 10px rgba(0, 0, 0, 0.2));
   font-size: 16px;
   left: -1px; // Hack for left-justified dropdown
+
+.feedback {
+  text-align: center;
+  background-color: $white-ter;
+  border-radius: 8px;
+  padding: 12px;
+}
+
+.feedback-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+}
+
+.item {
+  width: 5rem;
+  height: 5rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  user-select: none;
+}
+.radio {
+  display: none;
+}
+.radio ~ span {
+  font-size: 3rem;
+  filter: grayscale(100);
+  cursor: pointer;
+  transition: 0.1s;
+}
+
+.radio:checked ~ span {
+  filter: grayscale(0);
+  font-size: 3.5rem;
 }
 
 @import "highlight.scss";
