doc: Fix figure css

--- a/doc/themes/the-things-stack/assets/css/theme.scss
+++ b/doc/themes/the-things-stack/assets/css/theme.scss
@@ -163,7 +163,7 @@ $table-cell-padding: 1.2em 0.75em;
     font-family: $title-family;
     color: $title-color;
   }
-  figure {
+  figure > img {
     box-shadow: $card-shadow;
   }
 }
