console,oauth: Extend layout styling variables

--- a/pkg/webui/components/header/header.styl
+++ b/pkg/webui/components/header/header.styl
@@ -39,6 +39,7 @@
   border-normal('bottom')
   background: linear-gradient(bottom left, 0% #F8F8F8, 60% white) // @stylint ignore
   height: $header-height
+  box-sizing: border-box
   position: relative
   display: flex
   padding: 0 $ls.s
