--- a/pkg/webui/styles/variables/generic.styl
+++ b/pkg/webui/styles/variables/generic.styl
@@ -177,4 +177,8 @@ $zi = {
 
 $header-height = 7rem
 $header-height-mobile = 4rem
+$footer-height = 3rem
+$sidebar-width = 17rem
+$sidebar-width-minimized = 3rem
+$breadcrumbs-bar-height = 3rem
 
