console: Show and hide sidebar responsively

--- a/pkg/webui/components/navigation/side/item/item.styl
+++ b/pkg/webui/components/navigation/side/item/item.styl
@@ -25,7 +25,7 @@
       .link,
       .button
         display: flex
-        padding: $cs.s 0
+        padding: $cs.m 0
         height: auto
         justify-content: space-evenly
 
