--- a/pkg/webui/components/table/cell/cell.styl
+++ b/pkg/webui/components/table/cell/cell.styl
@@ -22,6 +22,9 @@
   &:first-child, &:last-child
     padding-right: $cs.s
 
+  &:first-child
+    font-weight: 600
+
   &:last-child:not(&-centered)
     text-align: right
 
