--- a/pkg/webui/components/table/cell/cell.styl
+++ b/pkg/webui/components/table/cell/cell.styl
@@ -23,7 +23,7 @@
     padding-right: $cs.s
 
   &:first-child
-    font-weight: 600
+    font-weight: $fw.bold
 
   &:last-child:not(&-centered)
     text-align: right
