--- a/pkg/webui/styles/variables/generic.styl
+++ b/pkg/webui/styles/variables/generic.styl
@@ -28,6 +28,7 @@ $c-input-border = #DFDFDF
 $c-success = #24C833
 $c-error = #FF5C5C
 $c-warning = #FFC464
+$tc-warning = #D18100
 $c-info = $c-active-blue
 
 
@@ -35,7 +36,7 @@ $c-info = $c-active-blue
 
 $tc-black = #000
 $tc-deep-gray = #363636
-$tc-subtle-gray = #AAA
+$tc-subtle-gray = #868686
 
 
 
