fixup! console,oauth: Add external prop to link component

--- a/pkg/webui/components/link/link.styl
+++ b/pkg/webui/components/link/link.styl
@@ -44,8 +44,9 @@
       cursor: not-allowed
 
 .icon
+  nudge('up', 2px)
   margin-left: $cs.xxs
-  font-size: 0.75rem
+  font-size: 0.9rem
 
 .doc-icon
   nudge('up')
