--- a/doc/themes/the-things-stack/layouts/shortcodes/events.html
+++ b/doc/themes/the-things-stack/layouts/shortcodes/events.html
@@ -1,10 +1,10 @@
 {{- with index .Site.Data "events" }}
 {{- range . }}
-<h3 id="event:{{ .name }}">Event <code>{{ .name }}</code></h3>
-<p>{{ .description }}</p>
+<h3 class="event-name" id="event:{{ .name }}">Event <code>{{ .name }}</code></h3>
+<p class="event-description">{{ .description }}</p>
 {{- with .data }}
 <details><summary>Show example of <code>data</code> field</summary>
-  <pre><code>{{ . | jsonify (dict "indent" "  ") }}</code></pre>
+  <pre class="event-example"><code>{{ . | jsonify (dict "indent" "  ") }}</code></pre>
 </details>
 {{- end }}
 {{- end }}
