console: Refactor entity title section

--- a/pkg/webui/console/components/entity-title-section/content/messages-count/messages-count.styl
+++ b/pkg/webui/console/components/entity-title-section/content/messages-count/messages-count.styl
@@ -13,45 +13,4 @@
 // limitations under the License.
 
 .container
-  margin-top: $ls.s
-
-.icon
-  height: 4rem
-  width: 3.5rem
-
-.title-section-container
-  display: flex
-  flex-wrap: nowrap
-
-.title-section
-  display: inline-flex
-  flex-direction: column
-  justify-content: center
-  align-items: flex-start
-  padding-left: $cs.m
-
-.title
-  text-margin-top($ls.m)
-  text-margin-bottom($cs.m)
-  color: $tc-black
-  font-weight: $fw.bolder
-  font-size: $fs.xl
-  margin: 0
-
-.id
-  color: $c-icon-fill
-
-  &-prefix
-    font-weight: $fw.bold
-
-    &:after
-      content: ':'
-      padding-right: $cs.xxs
-
-.h-rule
-  full-width()
-  margin-top: 0
-  margin-bottom: $ls.m
-
-  +media-query($bp.s)
-    margin-bottom: $ls.s
+  margin-left: $ls.s
