--- a/pkg/webui/console/components/entity-title-section/content/content.styl
+++ b/pkg/webui/console/components/entity-title-section/content/content.styl
@@ -13,45 +13,21 @@
 // limitations under the License.
 
 .container
-  margin-top: $ls.s
-
-.icon
-  height: 4rem
-  width: 3.5rem
-
-.title-section-container
   display: flex
-  flex-wrap: nowrap
+  justify-content: space-between
+  align-items: center
+  flex-wrap: wrap
+  margin: $ls.s 0 $ls.xxs
 
-.title-section
-  display: inline-flex
-  flex-direction: column
-  justify-content: center
-  align-items: flex-start
-  padding-left: $cs.m
+.content
+  display: flex
+  align-items: center
+  flex-wrap: wrap
 
-.title
-  text-margin-top($ls.m)
-  text-margin-bottom($cs.m)
-  color: $tc-black
-  font-weight: $fw.bolder
-  font-size: $fs.xl
-  margin: 0
+.creation-date
+  one-liner()
+  color: $tc-subtle-gray
 
-.id
-  color: $c-icon-fill
-
-  &-prefix
-    font-weight: $fw.bold
-
-    &:after
-      content: ':'
-      padding-right: $cs.xxs
-
-.h-rule
-  full-width()
-  margin-top: 0
-  margin-bottom: $ls.m
-
-  +media-query($bp.s)
-    margin-bottom: $ls.s
+  +media-query($bp.xxs)
+    padding-top: $cs.xs
+    flex-basis: 100%
