--- a/pkg/webui/console/components/entity-title-section/content/entity-count/entity-count.styl
+++ b/pkg/webui/console/components/entity-title-section/content/entity-count/entity-count.styl
@@ -13,45 +13,37 @@
 // limitations under the License.
 
 .container
-  margin-top: $ls.s
-
-.icon
-  height: 4rem
-  width: 3.5rem
-
-.title-section-container
+  line-height: 1
+  height: $fs.m
   display: flex
-  flex-wrap: nowrap
 
-.title-section
-  display: inline-flex
-  flex-direction: column
-  justify-content: center
-  align-items: flex-start
-  padding-left: $cs.m
+  &:not(:last-child)
+    margin-right: $cs.l
+    +media-query($bp.s)
+      margin-right: $cs.xs
 
-.title
-  text-margin-top($ls.m)
-  text-margin-bottom($cs.m)
-  color: $tc-black
-  font-weight: $fw.bolder
-  font-size: $fs.xl
-  margin: 0
+  .message
+    color: $tc-deep-gray
 
-.id
-  color: $c-icon-fill
+  &.error
+    .icon,
+    .value,
+    .message
+      color: $c-error
 
-  &-prefix
+  &.error .message
     font-weight: $fw.bold
 
-    &:after
-      content: ':'
-      padding-right: $cs.xxs
+.icon
+  color: $c-icon-fill
+  margin-right: $cs.xs
 
-.h-rule
-  full-width()
-  margin-top: 0
-  margin-bottom: $ls.m
+.value
+  color: $tc-deep-gray
+  font-weight: $fw.bold
+  margin-right: $cs.xxs
 
-  +media-query($bp.s)
-    margin-bottom: $ls.s
+.container:not(.error)
+  .message
+    +media-query($bp.s)
+      display: none
