--- a/pkg/webui/console/containers/application-title-section/status/status.styl
+++ b/pkg/webui/console/containers/application-title-section/status/status.styl
@@ -1,4 +1,4 @@
-// Copyright © 2019 The Things Network Foundation, The Things Industries B.V.
+// Copyright © 2020 The Things Network Foundation, The Things Industries B.V.
 //
 // Licensed under the Apache License, Version 2.0 (the "License");
 // you may not use this file except in compliance with the License.
@@ -12,20 +12,5 @@
 // See the License for the specific language governing permissions and
 // limitations under the License.
 
-import { connect } from 'react-redux'
-
-import {
-  selectSelectedApplication,
-  selectSelectedApplicationId,
-} from '@console/store/selectors/applications'
-
-const mapStateToProps = state => {
-  const appId = selectSelectedApplicationId(state)
-
-  return {
-    appId,
-    application: selectSelectedApplication(state),
-  }
-}
-
-export default ApplicationOverview => connect(mapStateToProps)(ApplicationOverview)
+.status
+  margin-right: $cs.l
