console: Fix height of app container

--- a/pkg/webui/styles/main.styl
+++ b/pkg/webui/styles/main.styl
@@ -28,6 +28,9 @@ body
   -moz-osx-font-smoothing: grayscale
   background: white
 
+:global(#app)
+  height: 100%
+
 ::-webkit-scrollbar
   width: .5rem
   height: .5rem
