console: Revert doc link merge commit
This reverts commit 7034f5bcd3feaa3b5c36eb68d3d7000d68815132, reversing
changes made to e8f8b73675a2fc59c221cbf96e3ade96807a6862.

--- a/pkg/webui/components/link/link.styl
+++ b/pkg/webui/components/link/link.styl
@@ -46,11 +46,8 @@
 .icon
   nudge('up', 2px)
   margin-left: $cs.xxs
-  margin-right: $cs.xxs
   font-size: 0.9rem
 
 .doc-icon
   nudge('up')
-
-.glossary-icon
-  font-size: 1rem
+  margin-right: 0.1rem
