console,oauth: Add glossary link component

--- a/pkg/webui/components/link/link.styl
+++ b/pkg/webui/components/link/link.styl
@@ -46,8 +46,17 @@
 .icon
   nudge('up', 2px)
   margin-left: $cs.xxs
+  margin-right: $cs.xxs
   font-size: 0.9rem
 
 .doc-icon
   nudge('up')
-  margin-right: 0.1rem
+
+.glossary-icon
+  display: block
+  padding: .1rem
+  height: 1rem
+  width: 1rem
+  font-size: 1rem
+  line-height: 1
+  transition: color $ad.secondary
