--- a/pkg/webui/components/navigation/side/item/item.styl
+++ b/pkg/webui/components/navigation/side/item/item.styl
@@ -15,8 +15,10 @@
 .item
   +media-query-min($bp.s)
     &-minimized
+      position: relative
       .message,
       .expand-icon
+      .sub-items
         display: none
 
       .icon
@@ -28,6 +30,11 @@
         padding: $cs.m 0
         height: auto
         justify-content: space-evenly
+
+      &:focus-within,
+      &:hover
+        .fly-out-list
+          display: block
 
 .button
   reset-button()
@@ -118,3 +125,17 @@
 
   &-open
     transform: translateY(-50%) rotate(180deg)
+
+.fly-out-list
+  display: none
+  left: 3rem
+  top: 0
+
+  &::before
+    content: ''
+    position: absolute
+    top: -30px
+    bottom: -30px
+    left: -10px
+    right: -30px
+    z-index: -1
