console,oauth: Update header

--- a/pkg/webui/components/header/header.styl
+++ b/pkg/webui/components/header/header.styl
@@ -56,7 +56,6 @@
   display: inline-flex
   align-items: center
   justify-content: flex-start
-  flex-grow: 0
 
   img
     nudge('up')
@@ -73,6 +72,7 @@
     display: none
 
 .profile-dropdown
+  margin-right: -2rem
   +media-query($bp.m)
     display: none
 
