console,oauth: Fix profile dropdown spacing

--- a/pkg/webui/components/profile-dropdown/profile-dropdown.styl
+++ b/pkg/webui/components/profile-dropdown/profile-dropdown.styl
@@ -19,7 +19,7 @@
   cursor: pointer
   transition: background-color $ad.s
   height: 100%
-  padding: 0 $cs.l
+  padding: 0 $cs.xl
 
   &:hover
     background-color: hoverize(white)
@@ -32,7 +32,10 @@
 
 .id
   one-liner()
-  margin-right: $cs.s
+  margin-right: $cs.xs
 
 .dropdown
   top: $header-height
+
+  &-icon
+    margin-right: -.4rem
