console,oauth: Update brand color variables

--- a/pkg/webui/styles/variables/brand.styl
+++ b/pkg/webui/styles/variables/brand.styl
@@ -17,9 +17,9 @@
 
 // ## General
 
-$c-active-blue = #2380FF
-$c-active-blue-hover = #006CFF
-$c-active-blue-active = #005FE1
+$c-active-blue = #3D73FF
+$c-active-blue-hover = #1E5DFF
+$c-active-blue-active = #0047FF
 $c-icon-fill = #686868
 $c-subtle-fill = #AAA
 $c-backdrop = #F3F3F3
@@ -27,6 +27,6 @@ $c-backdrop-lighter = #FAFAFA
 
 // ## Text
 
-$tc-active = #006CFF
+$tc-active = #3D73FF
 $tc-active-hover = $c-active-blue-hover
 $tc-error = #EA0000
