--- a/pkg/webui/components/header/header.styl
+++ b/pkg/webui/components/header/header.styl
@@ -12,20 +12,8 @@
 // See the License for the specific language governing permissions and
 // limitations under the License.
 
-.container
-  background-color: white
-  z-index: $zi.nav
-  width: 100%
-  +media-query($bp.s)
-    z-index: $zi.mobile-menu
-    position: fixed
-    top: 0
-    & + main
-        padding-top: $header-height
-        +media-query($bp.s)
-          padding-top: $header-height-mobile
-
-  +media-query($bp.m)
+mobile-styles($breakpoint)
+  +media-query($breakpoint)
     &.mobile-menu-open
       position: fixed
       z-index: $zi.mobile-menu
@@ -37,6 +25,58 @@
       .hamburger img
         width: 1.5rem
 
+    .mobile-menu-button
+      display: block
+
+    .nav-list
+      display: none
+
+    .profile-dropdown
+      display: none
+
+    .right
+      .preload-icon
+        opacity: 0
+        font-size: .001px
+        position: absolute
+        top: -1px
+        right: -1px
+
+    .mobile-menu
+      display: flex
+
+  +media-query-between($bp.s, $breakpoint)
+    .mobile-menu
+      height: 'calc(100vh - %s)' % $header-height
+
+  +media-query($bp.s)
+    z-index: $zi.mobile-menu
+    position: fixed
+    top: 0
+    & + main
+        padding-top: $header-height
+        +media-query($bp.s)
+          padding-top: $header-height-mobile
+
+    .bar
+      height: $header-height-mobile
+      background-color: white
+      padding: 0 $ls.xxs
+
+    .mobile-menu
+      height: 'calc(100vh - %s)' % $header-height-mobile
+      top: $header-height-mobile
+
+    .mobile-menu-button
+      width: $header-height-mobile
+      margin-right: $ls.xxs * -1
+
+.container
+  mobile-styles($bp.m)
+  background-color: white
+  z-index: $zi.nav
+  width: 100%
+
 .bar
   border-normal('bottom')
   background: linear-gradient(bottom left, 0% #F8F8F8, 60% white) // @stylint ignore
@@ -47,10 +87,6 @@
   padding: 0 $ls.s
   justify-content: space-between
   flex: none
-  +media-query($bp.s)
-    height: $header-height-mobile
-    background-color: white
-    padding: 0 $ls.xxs
 
 .logo
   display: inline-flex
@@ -68,15 +104,11 @@
   flex-grow: 2
   height: 100%
   max-width: 36rem
-  +media-query($bp.m)
-    display: none
 
 .profile-dropdown
   margin-right: -2rem
-  +media-query($bp.m)
-    display: none
 
-.mobile-menu
+.mobile-menu-button
   reset-button()
   display: none
   width: $header-height
@@ -93,13 +125,6 @@
     img
       center-absolute()
       width: 2rem
-
-  +media-query($bp.m)
-    display: block
-
-  +media-query($bp.s)
-    width: $header-height-mobile
-    margin-right: $ls.xxs * -1
 
 .left
   display: flex
@@ -118,11 +143,3 @@
   & > div:first-child
     max-width: 15rem
     border-color: $c-divider-dark
-
-+media-query($bp.m)
-  .preload-icon
-    opacity: 0
-    font-size: .001px
-    position: absolute
-    top: -1px
-    right: -1px
