console, dev: Add simple markdown to backend error messages

--- a/pkg/webui/styles/main.styl
+++ b/pkg/webui/styles/main.styl
@@ -67,6 +67,13 @@ hr
   border: 0
   height: 1px
 
+code
+  font-family: $font-family-mono
+  font-size: $fs.s
+  background-color: $c-text-backdrop
+  padding: 0.1rem $cs.xxs
+  color: $tc-black
+
 // Remove focus from elements when targeted by a mouse.
 // The `focus-visible` class is added on focusable elements
 // automatically when in focus.
