--- a/pkg/webui/styles/variables/brand.styl
+++ b/pkg/webui/styles/variables/brand.styl
@@ -24,6 +24,7 @@ $c-icon-fill = #686868
 $c-subtle-fill = #AAA
 $c-backdrop = #F3F3F3
 $c-backdrop-lighter = #FAFAFA
+$c-text-backdrop = #ECECEC
 
 // ## Text
 
