console,oauth: Prevent header shrinking

--- a/pkg/webui/components/header/header.styl
+++ b/pkg/webui/components/header/header.styl
@@ -104,6 +104,7 @@ mobile-styles($breakpoint)
   flex-grow: 2
   height: 100%
   max-width: 36rem
+  flex-shrink: 0
 
 .profile-dropdown
   margin-right: -2rem
