account: Convert views to functional components

--- a/pkg/webui/account/views/authorize/authorize.styl
+++ b/pkg/webui/account/views/authorize/authorize.styl
@@ -60,3 +60,8 @@
 
 .note-text
   color: $tc-subtle-gray
+
+.logout-button
+  reset-button()
+  color: $tc-subtle-gray
+  text-decoration: underline
