console: Add documentation and support links

--- a/pkg/webui/components/footer/footer.styl
+++ b/pkg/webui/components/footer/footer.styl
@@ -39,6 +39,10 @@
   &:not(:last-child)
     margin-right: $cs.xs
 
+.documentation
+  &:not(:last-child)
+    margin-right: $cs.xs
+
 .claim
   +media-query($bp.s)
     display: none
