account: Improve front mobile styles

--- a/pkg/webui/account/views/front/front.styl
+++ b/pkg/webui/account/views/front/front.styl
@@ -74,6 +74,7 @@
     min-width: auto
     max-width: none
     width: 100%
+    max-width: 30rem
 
 .h-rule
   margin: $ls.s 0
@@ -88,6 +89,7 @@
   font-size: $fs.xl3
   +media-query($bp.s)
     font-size: $fs.xl
+    text-align: center
 
 .sub-title
   font-size: 3rem
