console: Mark synthetic events as originating from console

--- a/pkg/webui/console/components/events/events.styl
+++ b/pkg/webui/console/components/events/events.styl
@@ -133,6 +133,9 @@ $event-container-height = 40px
     background-color: lighten($tc-warning, 55)
     .cell-time
       color: $tc-warning
+    .cell-type::before
+      content: "Console:"
+      margin-right: $cs.xs
 
   &:not(.widget)
     cursor: pointer
