--- a/pkg/webui/console/views/device-add/repository/hints/hints.styl
+++ b/pkg/webui/console/views/device-add/repository/hints/hints.styl
@@ -12,7 +12,6 @@
 // See the License for the specific language governing permissions and
 // limitations under the License.
 
-.tabs
-  border-normal('bottom')
-  margin-top: 0
+.progress-message
+  display: block
   margin-bottom: $ls.s
