console: Add highlight for frame counter

--- a/pkg/webui/console/components/events/previews/shared/description-list/description-list.styl
+++ b/pkg/webui/console/components/events/previews/shared/description-list/description-list.styl
@@ -42,3 +42,12 @@
   &:after
     content: '>'
 
+.highlight
+  line-height: 1.9rem;
+  border: 1px solid $c-divider-dark;
+  font-family: 'IBM Plex Mono', Consolas, Monaco, 'Andale Mono', 'Ubuntu Mono', monospace
+  display: inline
+  background-color: white
+  height: 100%
+  padding: 0 $cs.xs
+  border-radius: $br.s
