console: Fix footer layout

--- a/pkg/webui/components/footer/footer.styl
+++ b/pkg/webui/components/footer/footer.styl
@@ -39,6 +39,9 @@
   &:not(:last-child)
     margin-right: $cs.xs
 
+  +media-query($bp.xs3)
+    display: none
+
 .documentation
   &:not(:last-child)
     margin-right: $cs.xs
