console: Add profile picture to header

--- a/pkg/webui/components/mobile-menu/mobile-menu.styl
+++ b/pkg/webui/components/mobile-menu/mobile-menu.styl
@@ -45,3 +45,8 @@ ul.mobile-dropdown
   align-items: center
   b
     margin-left: $cs.xxs
+
+.profile-picture-mobile
+  height: 3rem
+  width: 3rem
+  margin-right: $cs.m
