account: Move code view to authenticated views

--- a/pkg/webui/account/views/front/front.styl
+++ b/pkg/webui/account/views/front/front.styl
@@ -100,7 +100,7 @@
 .submit-button
   min-width: 8rem
 
-.code, .spinner
+.spinner
   margin-bottom: $cs.m
 
 .buttons
@@ -131,6 +131,6 @@
   +media-query-min($bp.s)
     display: static
 
-.code-description, .error-description
+.error-description
   text-margin-bottom($cs.xl)
   display: block
