--- a/pkg/webui/account/views/code/code.styl
+++ b/pkg/webui/account/views/code/code.styl
@@ -12,24 +12,9 @@
 // See the License for the specific language governing permissions and
 // limitations under the License.
 
-import Overview from '@account/views/overview'
-import ProfileSettings from '@account/views/profile-settings'
-import Code from '@account/views/code'
+.code
+  margin-bottom: $cs.m
 
-export default [
-  {
-    path: '/',
-    exact: true,
-    component: Overview,
-  },
-  {
-    path: '/profile-settings',
-    exact: true,
-    component: ProfileSettings,
-  },
-  {
-    path: '/code',
-    exact: true,
-    component: Code,
-  },
-]
+.code-description
+  text-margin-bottom($cs.xl)
+  display: block
